--- a/Proyecto2021/Views/Shared/_Layout.cshtml
+++ b/Proyecto2021/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sobre mi", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("CRUD Usuario","Index", "Usuario")</li>
                 </ul>
             </div>
         </div>
