--- a/Proyecto2021/Views/Producto/Index.cshtml
+++ b/Proyecto2021/Views/Producto/Index.cshtml
@@ -50,7 +50,7 @@
             <td>
                 @Html.ActionLink("Editar", "Edit", new { id = item.id }) |
                 @Html.ActionLink("Ver Todo", "Details", new { id = item.id }) |
-                @Html.ActionLink("Eliminar", "Delete", new { id = item.id }, new { @class = "linkDelete" })
+                @Html.ActionLink("Eliminar-", "Delete", new { id = item.id }, new { @class = "linkDelete" })
             </td>
         </tr>
     }
