Se arreglan las vistas

--- a/Proyecto2021/Views/Shared/_Layout.cshtml
+++ b/Proyecto2021/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("CRUD Usuario", "Index", "Usuario")</li>
                     <li>@Html.ActionLink("CRUD Producto", "Index", "Producto")</li>
+                    <li>@Html.ActionLink("CRUD Cliente", "Index", "Cliente")</li>
                 </ul>
             </div>
         </div>
