--- a/Proyecto2021/Views/Shared/_Layout.cshtml
+++ b/Proyecto2021/Views/Shared/_Layout.cshtml
@@ -24,9 +24,10 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sobre mi", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("CRUD Usuario", "Index", "Usuario")</li>
-                    <li>@Html.ActionLink("CRUD Producto", "Index", "Producto")</li>
-                    <li>@Html.ActionLink("CRUD Cliente", "Index", "Cliente")</li>
+                    <li>@Html.ActionLink("Usuario", "Index", "Usuario")</li>
+                    <li>@Html.ActionLink("Producto", "Index", "Producto")</li>
+                    <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
+                    <li>@Html.ActionLink("Compra", "Index", "Compra")</li>
                 </ul>
             </div>
         </div>
