Se arreglan Vistas de Proveedor

--- a/Proyecto2021/Views/Shared/_Layout.cshtml
+++ b/Proyecto2021/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li>@Html.ActionLink("Producto", "Index", "Producto")</li>
                     <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
                     <li>@Html.ActionLink("Compra", "Index", "Compra")</li>
+                    <li>@Html.ActionLink("Proveedor", "Index", "Proveedor")</li>
                 </ul>
             </div>
         </div>
