--- a/Proyecto2021/Views/Proveedor/Index.cshtml
+++ b/Proyecto2021/Views/Proveedor/Index.cshtml
@@ -5,24 +5,24 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Todos Los Proveeedores</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo Proveedor", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.nombre)
+           Nombre
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.direccion)
+           Direccion
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.telefono)
+           Telefono
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.nombre_contacto)
+            Nombre Contacto
         </th>
         <th></th>
     </tr>
@@ -42,9 +42,9 @@
             @Html.DisplayFor(modelItem => item.nombre_contacto)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.ActionLink("Editar", "Edit", new { id=item.id }) |
+            @Html.ActionLink("Ver Todo", "Details", new { id=item.id }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.id })
         </td>
     </tr>
 }
