--- a/Proyecto2021/Views/Usuario/Login.cshtml
+++ b/Proyecto2021/Views/Usuario/Login.cshtml
@@ -13,12 +13,12 @@
 }
 
 <div class="form-horizontal">
-    <form action="/Usuario/Login"method="post">
+    <form action="/Usuario/Login" method="post">
         @Html.AntiForgeryToken()
         <div class="form-group">
             <label class="control-label col-md-2">Email</label>
             <div class="col-md-10">
-                <input type="email" name="email"class="form-control" />
+                <input type="email" name="email" class="form-control" />
 
             </div>
 
@@ -28,15 +28,18 @@
 
             <label class="control-label col-md-2">Password</label>
             <div class="col-md-10">
-                <input type="password" name="Password" class="form-control" />
+                <input type="password" name="password" class="form-control" />
 
             </div>
 
         </div>
 
-          <div class="col-md-offset-2 col-md-10">
-              <input type="submit" value="Ingresar" class="btn btn-default"/>
-          </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Ingresar" class="btn btn-default" />
+            </div>
+
+        </div>
 
     </form>
 
