Mensajes de error

--- a/Proyecto2021/Views/Shared/_Layout.cshtml
+++ b/Proyecto2021/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Usuario", "Index", "Usuario")</li>
-                        <li>@Html.ActionLink("Sslir", "CloseSession", "Usuario")</li>
+                        <li>@Html.ActionLink("Salir", "CloseSession", "Usuario")</li>
                     }
                 </ul>
             </div>
