Cargue de archivos

--- a/Proyecto2021/Views/Shared/_Layout.cshtml
+++ b/Proyecto2021/Views/Shared/_Layout.cshtml
@@ -24,16 +24,16 @@
 
 
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Sobre mi", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Producto", "Index", "Producto")</li>
-                    <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
-                    <li>@Html.ActionLink("Compra", "Index", "Compra")</li>
-                    <li>@Html.ActionLink("Proveedor", "Index", "Proveedor")</li>
+                    <li>@Html.ActionLink("Link", "", "")</li>
+                    <li>@Html.ActionLink("Link", "", "")</li>   
+                    <li>@Html.ActionLink("Producto", "Index", "Producto")</li>   
+                    <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>    
+                    <li>@Html.ActionLink("Compra", "Index", "Compra")</li>    
+                    <li>@Html.ActionLink("Proveedor", "Index", "Proveedor")</li>    
                     <li>@Html.ActionLink("Iniciar Sesion", "Login", "Usuario")</li>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Usuario", "Index", "Usuario")</li>
+                        
                         <li>@Html.ActionLink("Salir", "CloseSession", "Usuario")</li>
                     }
                 </ul>
